# ai2048

./: .gitignore  Cargo.toml  README.md  build.sh  rustfmt.toml
ai2048-bin/: Cargo.toml
ai2048-bin/src/: main.rs
ai2048-lib/: Cargo.toml  build.rs
ai2048-lib/benches/: game_logic.rs  play_game.rs
ai2048-lib/src/: build_common.rs  build_generated.rs  cache.rs  game_logic.rs  heuristic.rs  lib.rs  searcher.rs  searcher_data.rs  searcher_parallel.rs
ai2048-test/: Cargo.toml
ai2048-test/src/: main.rs
ai2048-wasm/: Cargo.toml
ai2048-wasm/src/: lib.rs
ai2048_bin/: Cargo.toml
ai2048_lib/: Cargo.toml  rustfmt.toml
ai2048_lib/src/: agent.rs  board.rs  game_logic.rs  heuristic.rs  integer_magic.rs  lib.rs  search_tree.rs  searcher.rs
ai2048_lib/src/heuristic/: composite.rs  heat_map.rs  mod.rs
ai2048_lib/src/search_tree/: cache.rs  mod.rs
src/: agent.rs  board.rs  float_ext.rs  grid.rs  heuristic.rs  integer_magic.rs  lib.rs  main.rs  search_tree.rs  searcher.rs
src/heuristic/: composite.rs  heat_map.rs  mod.rs
src/search_tree/: cache.rs  mod.rs
test-results/: 01-0.02.txt  02-0.01.txt  03-0.005.txt  04-0.003.txt  05-0.002.txt  06-0.001.txt  10-0.0001.txt
www/: index.html  package-lock.json  package.json  tsconfig.json  tslint.json  webpack.config.js
www/ai2048-wasm/: Cargo.toml
www/ai2048-wasm/src/: lib.rs
www/app/: ai.ts  game_manager.ts  game_state.ts  grid.ts  html_actuator.ts  index.html  input_manager.ts  local_storage_manager.ts  main.ts  tile.ts  timeout.ts
www/app/style/: main.scss
www/browser/: ai.ts  game_manager.ts  html_actuator.ts  main.ts
www/js/: ai.js  application.js  game_manager.js  grid.js  html_actuator.js  index.js  index.ts  input_manager.js  keyboard_input_manager.js  local_storage_manager.js  tile.js
www/src/: ai.ts  ai.worker.ts  ai_itnterop.ts  event_manager.ts  game_manager.ts  local_storage_manager.ts  main.ts  protocols.d.ts
www/style/: helpers.scss  main.scss
www/style/fonts/: clear-sans.css
www/ts/: ai.ts  game_manager.ts  html_actuator.ts  index.ts  input_manager.ts  tile.ts
www/worker/: worker.js
