[package]
authors = ["Victor Gavrish <victor.gavrish@gmail.com>"]
license = "LGPL"
name = "ai2048"
version = "0.1.0"

[dependencies]
futures = "0.1"
futures-cpupool = "0.1"

[dependencies.ai2048_lib]
optional = false
path = "./ai2048_lib"

[profile]

[profile.dev]
codegen-units = 4

[profile.release]
debug = true
lto = true
opt-level = 3
