[package]
authors = ["Victor Gavrish <victor.gavrish@gmail.com>"]
license = "LGPL"
name = "ai2048-bin"
version = "0.1.0"
edition = "2018"

[dependencies]
crossbeam = "0.7.3"
chrono = "0.4.10"
cfg-if = "0.1.10"

ai2048-lib = { path = "../ai2048-lib", features = ["parallel"] }

[target.'cfg(target_os = "linux")'.dependencies]
jemallocator = "0.3.2"
