[package]
authors = ["Victor Gavrish <victor.gavrish@gmail.com>"]
license = "LGPL"
name = "ai2048-lib"
version = "0.1.0"
edition = "2018"

[features]
default = ["hashbrown", "fnv"]
parallel = ["rayon"]

[dependencies]
lazy_static = "1.2.0"
rand = "0.6.1"
bytecount = "0.4.0"
cfg-if = "0.1.6"

fnv = { version = "1.0.6", optional = true }
fxhash = { version = "0.2.1", optional = true }

hashbrown = { version = "0.1.7", optional = true }
indexmap = { version = "1.0.2", optional = true }

rayon = { version = "1.0.3", optional = true }

[dev-dependencies]
criterion = "0.2.5"

[[bench]]
name = "play_game"
harness = false

[[bench]]
name = "game_logic"
harness = false
