[package]
authors = ["Victor Gavrish <victor.gavrish@gmail.com>"]
license = "LGPL"
name = "ai2048-lib"
version = "0.1.0"
edition = "2018"
build = "build.rs"

[features]
default = ["hashbrown", "fnv"]
parallel = ["rayon"]

[dependencies]
lazy_static = "1.3.0"
rand = "0.6.5"
bytecount = "0.5.1"
cfg-if = "0.1.7"

fnv = { version = "1.0.6", optional = true }
fxhash = { version = "0.2.1", optional = true }
t1ha = { version = "0.1.0", optional = true }

hashbrown = { version = "0.1.8", optional = true }
indexmap = { version = "1.0.2", optional = true }

rayon = { version = "1.0.3", optional = true }
num = "0.2.0"

[dev-dependencies]
criterion = "0.2.10"

[[bench]]
name = "play_game"
harness = false

[[bench]]
name = "game_logic"
harness = false
