[package]
authors = ["Victor Gavrish <victor.gavrish@gmail.com>"]
license = "LGPL"
name = "ai2048-lib"
version = "0.1.0"
edition = "2018"

[features]
default = ["hashbrown", "fnv"]
parallel = ["rayon"]

[dependencies]
lazy_static = "1.4.0"
rand = "0.7.2"
bytecount = "0.6.0"
cfg-if = "0.1.10"

fnv = { version = "1.0.6", optional = true }
fxhash = { version = "0.2.1", optional = true }
t1ha = { version = "0.1.0", optional = true }

hashbrown = { version = "0.6.3", optional = true }
indexmap = { version = "1.3.0", optional = true }

rayon = { version = "1.2.1", optional = true }
num = "0.2.0"

[dev-dependencies]
criterion = "0.3.0"

[[bench]]
name = "play_game"
harness = false

[[bench]]
name = "game_logic"
harness = false
