[package]
authors = ["Victor Gavrish <victor.gavrish@gmail.com>"]
categories = ["wasm"]
description = "2048 AI in wasm"
license = "LGPL"
name = "ai2048-wasm"
repository = "https://github.com/VictorGavrish/ai2048"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
default = []

[dependencies]
ai2048-lib = { path = "../ai2048-lib" }
cfg-if = "0.1.7"
wasm-bindgen = "0.2.38"
console_error_panic_hook = "0.1.6"
wee_alloc = { version = "0.4.3", optional = true }
web-sys = { version = "0.3.15", features = ["console"] }
