[package]
authors = ["Victor Gavrish <victor.gavrish@gmail.com>"]
license = "LGPL"
name = "ai2048_lib"
version = "0.1.0"
edition = "2018"

[dependencies]
fnv = "1.0"
itertools = "0.5"
lazy_static = "0.2"
lazycell = "0.5.0"
rand = "0.3"
time = "0.1"
bytecount = "0.3.1"

[profile]

[profile.dev]
codegen-units = 4

[profile.release]
debug = true
lto = true
opt-level = 3
