[package]
authors = ["Victor Gavrish <victor.gavrish@gmail.com>"]
license = "LGPL"
name = "ai2048_lib"
version = "0.1.0"
edition = "2018"

[dependencies]
hashbrown = "0.1"
itertools = "0.7"
lazy_static = "0.2"
rand = "0.5"
bytecount = "0.4"

[profile]

[profile.dev]
codegen-units = 4

[profile.release]
debug = true
lto = true
opt-level = 3
codegen-units = 1
