[package]
authors = ["Victor Gavrish <victor.gavrish@gmail.com>"]
categories = ["wasm"]
description = "2048 AI in wasm"
license = "LGPL"
name = "ai2048-wasm"
repository = "https://github.com/VictorGavrish/ai2048"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
cfg-if = "0.1.5"
wasm-bindgen = "0.2.25"
console_error_panic_hook = "0.1.5"
ai2048-lib = { path = "../../ai2048-lib" }
wee_alloc = { version = "0.4.2", optional = true }
web-sys = { version = "0.3", features = ["console"] }

# [dependencies.web-sys]
# version = "0.3"
# features = ["console"]

[features]
default-features = []
